--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,26 @@ body {
   background-color: rgb(136, 136, 124);
 }
 
+.book-heading {
+  font-size: x-large;
+  font-weight: 800;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 20px;
+}
+
+.my-nav {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: larger;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
 .book-item {
   display: flex;
-  gap: 100px;
   border: 2px solid gray;
   margin: 10px;
+  gap: 200px;
 }
 
 .left-section {
@@ -33,10 +48,22 @@ body {
 ul {
   display: flex;
   list-style-type: none;
-  /* justify-content: flex-start; */
   align-items: flex-start;
   gap: 10px;
-  border: 2px solid green;
+  color: rgb(44, 44, 85);
+  margin-left: -40px;
+  gap: 10px;
+}
+
+form {
+  display: flex;
+  justify-content: space-around;
+}
+input {
+  font-size: larger;
+}
+.bookFormInput {
+  width: 300px;
 }
 
 button {
