--- a/src/index.scss
+++ b/src/index.scss
@@ -131,3 +131,124 @@ button {
   top: 56px;
   left: 12px;
 }
+
+@keyframes lds-roller {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.progress-bar {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background: radial-gradient(closest-side, white 79%, transparent 80% 100%),
+    conic-gradient(#379cf6 65%, rgb(226, 226, 226) 0);
+}
+
+.progress {
+  display: flex;
+  gap: 2em;
+}
+
+.current-chapter {
+  text-transform: uppercase;
+  color: gray;
+}
+
+.chapter {
+  font-size: 1.3em;
+  font-weight: 500;
+  margin-top: 0.2em;
+}
+
+.update {
+  text-transform: uppercase;
+  background-color: #379cf6;
+  font-size: 0.8em;
+  color: #fff;
+  padding: 0.7em 2.2em;
+  margin-top: 0.7em;
+  border-radius: 0.4em;
+
+  &:hover {
+    scale: 1.1;
+  }
+}
+
+.infos {
+  border-left: 2px solid #e9e8e8;
+  padding-left: 2em;
+}
+
+.author {
+  padding: 0.4em;
+  border: 1px solid #e9e8e8;
+  flex: 1;
+}
+
+.select {
+  border: 1px solid #e9e8e8;
+  color: gray;
+  padding: 0.5em 2.5em;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+input:focus {
+  outline: none;
+}
+
+.submit {
+  text-transform: uppercase;
+  background-color: #379cf6;
+  font-size: 0.6em;
+  color: #fff;
+  padding: 0.7em 2.2em;
+  border-radius: 0.4em;
+  cursor: pointer;
+
+  &:hover {
+    scale: 1.1;
+  }
+
+  &:active {
+    opacity: 0.8;
+  }
+}
+
+.books {
+  padding: 2em 3em;
+}
+
+.form {
+  margin-top: 1em;
+  padding: 0 5em;
+
+  .form-line {
+    border: 1px solid #e9e8e8;
+  }
+
+  .form-title {
+    color: gray;
+    font-size: 1.4em;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+  }
+
+  .form-body {
+    display: flex;
+    justify-content: space-between;
+    gap: 1em;
+  }
+}
+
+.error {
+  margin-top: "50px";
+}
