--- a/src/index.css
+++ b/src/index.css
@@ -160,9 +160,10 @@ button {
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  background:
+
+  /* background:
     radial-gradient(closest-side, white 79%, transparent 80% 100%),
-    conic-gradient(#379cf6 65%, rgb(226, 226, 226) 0);
+    conic-gradient(#379cf6 65%, rgb(226, 226, 226) 0); */
 }
 
 .progress {
@@ -265,5 +266,5 @@ input:focus {
 }
 
 .error {
-  margin-top: "50px";
+  margin-top: 50px;
 }
