--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,8 @@
 
 body {
   margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    "Roboto",
-    "Oxygen",
-    "Ubuntu",
-    "Cantarell",
-    "Fira Sans",
-    "Droid Sans",
-    "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -31,12 +22,7 @@ body {
 }
 
 code {
-  font-family:
-    source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -156,13 +142,17 @@ button {
   }
 }
 
-.progress-bar {
-  width: 80px;
-  height: 80px;
+.circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0.3rem solid #3498db;
   border-radius: 50%;
-  background:
-    radial-gradient(closest-side, white 79%, transparent 80% 100%),
-    conic-gradient(#379cf6 65%, rgb(226, 226, 226) 0);
+  width: 5rem;
+  height: 5rem;
+  background-color: #fff;
+  border-bottom-color: rgb(175, 175, 175);
+  transform: rotate(240deg);
 }
 
 .progress {
