--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,17 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    "Roboto",
+    "Oxygen",
+    "Ubuntu",
+    "Cantarell",
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -22,7 +31,12 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family:
+    source-code-pro,
+    Menlo,
+    Monaco,
+    Consolas,
+    "Courier New",
     monospace;
 }
 
@@ -38,10 +52,10 @@ button {
 
 .add-button {
   text-transform: uppercase;
-  background-color: #379cf6;
+  background-color: #0577db;
   font-size: 0.8em;
   color: #fff;
-  padding: 0.7em 2.2em;
+  padding: 0.9em 2.2em;
   margin-top: 0.7em;
   border-radius: 0.4em;
 }
@@ -249,6 +263,8 @@ input:focus {
 
 .form-line {
   border: 0.5px solid #dddada;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .form-title {
@@ -284,6 +300,7 @@ nav {
   width: 1.4em;
   height: 1.4em;
   border: none;
+  border-radius: 0.7em;
 }
 
 /* .form-line {
